# jump-particles

./: .gitignore  CMakeLists.txt  README.md
Phase-1 SFML window setup/: CMakeLists.txt
Phase-2 Drawing a single static particle/: CMakeLists.txt
Phase-2 Drawing a single static particle/src/: game.cpp
Phase-3 Implementing Basic Kinematics/: README.md
Phase-4 Window boundary collisions/: README.md
Phase-4 Window boundary collisions/src/: game.cpp  game.hpp  main.cpp  particle.cpp  particle.hpp
Phase-5 Handling multiple particles/: CMakeLists.txt  README.md
Phase-5 Handling multiple particles/src/: game.hpp  particle.hpp  particleSystem.cpp
Phase-6 Implementing particle-particle collisions/: CMakeLists.txt  README.md
Phase-6 Implementing particle-particle collisions/src/: game.cpp  particle.cpp  particleSystem.cpp  physicsSolver.cpp
SFML window setup/: README.md
SFML window setup/src/: game.cpp  main.cpp
jump-particles-1/: CMakeLists.txt  README.md
jump-particles-1/src/: game.hpp
jump-particles-10/: CMakeLists.txt  README.md
jump-particles-10/src/: button.cpp  game.cpp  game.hpp  magnet.cpp  magnet.hpp  particle.cpp  particleSystem.cpp  particleSystem.hpp
jump-particles-2/: CMakeLists.txt  README.md
jump-particles-2/src/: game.hpp  particle.cpp  particle.hpp
jump-particles-3/: CMakeLists.txt  README.md
jump-particles-3/src/: game.cpp  particle.cpp  particle.hpp
jump-particles-4/: CMakeLists.txt  README.md
jump-particles-4/src/: game.cpp
jump-particles-5/: CMakeLists.txt  README.md
jump-particles-5/src/: game.cpp  particleSystem.hpp
jump-particles-6/: CMakeLists.txt  README.md
jump-particles-6/src/: main.cpp  particle.hpp  particleSystem.cpp  particleSystem.hpp
jump-particles-7/: CMakeLists.txt  README.md
jump-particles-7/src/: game.cpp  game.hpp  particle.cpp  particleSystem.cpp
jump-particles-8/: CMakeLists.txt  README.md
jump-particles-8/src/: button.hpp  game.cpp  game.hpp  particle.hpp  particleSystem.cpp  particleSystem.hpp  physicsSolver.hpp
jump-particles-9/: CMakeLists.txt  README.md
jump-particles-9/src/: game.cpp  game.hpp  particle.hpp  particleSystem.cpp  particleSystem.hpp  physicsSolver.cpp
